AKS/kube-mon/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kubemon
  labels:
  name: prometheus
spec:
  rules:
    - host: promn.woagw.cloud-cafe.cf
      http:
        paths:
          - backend:
              serviceName: prometheus
              servicePort: 8080
